# fastapi_test_project

./: docker-compose.yml
src/: .env  Dockerfile  main.py  pyproject.toml
src/authentication/: auth.py  jwt_bearer.py
src/config/: db_settings.py  error_messages.py
src/routes/: login.py  posts_urls.py  register.py  users_urls.py
src/services/: login_handler.py  post_handler.py  register_handler.py  users_handler.py
src/tables/: likes.py  post.py  user.py
